--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <title>Considered Consumerism</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
+  </head>
 
-    </head>
-    <body>
+  <body>
+    <header>
+      <nav>
+        <h1> Considered Consumerism </h1>
+        <h2>Ethical Shopping Made Easier</h2>
+    </header>
+    <main>
+        <section id="home">
 
-    <div>
-      <h1> Considered Consumerism </h1>
-    <h2>Ethical Shopping Made Easier</h2>
-  </div>
+        </section>
 
+        <section id="Latest News">
+
+        </section>
+
+        <section id="Shops">
+
+        </section>
+        <section id="Contact">
+
+        </section>
+    </main>
+
+    <footer>
+
+      </footer>
     </body>
   </html>
