Half list added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <body>
     <header>
       <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#Latest News">Latest News</a></li>
+            <li>
         <h1> Considered Consumerism </h1>
         <h2>Ethical Shopping Made Easier</h2>
     </header>
