--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
   <body>
     <header>
+      <img scr="cotton_picture.jpg">
       <nav>
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#Latest News">Latest News</a></li>
-            <li>
+            <li><a href="Shops">Ethical Shops</a></li>
+            <li><a href="Contact">Get Involved</a></li>
         <h1> Considered Consumerism </h1>
         <h2>Ethical Shopping Made Easier</h2>
     </header>
