--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <section id="Shops">
           <div class=section-inner>
             <h4> Ethical Shops in Ireland </h4>
+            <p2> Reformation </p2>
 
         </section>
         <section id="Contact">
